crates/toml_edit/tests/snapshots/invalid/ext/float/trailing-exp.stderr
TOML parse error at line 1, column 9
  |
1 | a = 0.0E
  |         ^
invalid exponent, expected digits
